--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,6 +4,8 @@ backend:
 media_folder: "public/assets/images"
 public_folder: "/assets/images"
 publish_mode: editorial_workflow
+site_url: https://11ty-portfolio-template.netlify.app/
+logo_url: site_url/assets/images/logoipsum-logo-1.svg
 collections:
   - label: "Projects" 
     name: "project"
@@ -12,63 +14,69 @@ collections:
     slug: "{{year}}-{{month}}-{{slug}}"
     preview_path: projects/{{slug}}
     fields: 
-     - { label: "Title", name: "title", widget: "string" }
-     - { label: "Date", name: "date", widget: "datetime" }
+     - { label: "Title", name: "title", widget: "string", hint: "The title of the project. This will also be displayed in the tab name." }
+     - { label: "Date", name: "date", widget: "datetime", hint: "When was the project created?" }
      - label: "Tags"
        name: "tags"
        widget: "select"
+       hint: "All Projects should have 'project'. 'featured' will be displayed on the home page in a snippet."
        multiple: true
        options: ["project", "featured"]
        default: ["project"]
-     - { label: "Featured Image", name: "image", widget: "image" }
-     - { label: "Image caption", name: "imageAlt", widget: "string" }
+     - { label: "Thumbnail Image", name: "image", widget: "image", hint: "The image that will be displayed in the snippet and background." }
+     - { label: "Image caption", name: "imageAlt", widget: "string", hint: "The text displayed when the image isn't loaded." }
      - { label: "Summary", name: "summary", widget: "string" }
-     - { label: "Page Meta Description", name: "metaDescription", widget: "string" }
-     - { label: "Body", name: "body", widget: "markdown"}
+     - { label: "Page Meta Description", name: "metaDescription", widget: "string", hint: "Define a description of this web page. This is used in SEO." }
+     - { label: "Body", name: "body", widget: "markdown", hint: "Any content you want to add. This will already be stylized for you."}
   - label: "Pages"
     name: "pages"
     files:
       - label: "Home Page"
         name: "index"
         file: "src/index.json"
+        preview_path: /
         editor:
           preview: false
         fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
-          - { label: "Introduction", name: "intro", widget: "string" }
-          - { label: "Summary", name: "summary", widget: "string" }
+          - { label: "Title", name: "title", widget: "string", hint: "The text that will be displayed in the tab of the webpage." }
+          - { label: "Page Meta Desciption", name: "metaDescription", widget: "string", hint: "Define a description of this web page. This is used in SEO." }
+          - { label: "Introduction", name: "intro", widget: "string", hint: "The first line a user see's when visiting the website." }
+          - { label: "Summary", name: "summary", widget: "string", hint: "Try keep it short but effective." }
       - label: "Work Page"
         name: "work"
         file: "src/work/work.json"
+        preview_path: work/
         editor:
           preview: false
         fields:
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Page Meta Desciption", name: "metaDescription", widget: "string" }
+          - { label: "Title", name: "title", widget: "string", hint: "The text that will be displayed in the tab of the webpage." }
+          - { label: "Page Meta Desciption", name: "metaDescription", widget: "string", hint: "Define a description of this web page. This is used in SEO." }
           - label: "Pagination"
             name: "pagination"
             widget: "object"
+            hint: "Groups the projects according to how many you want to be displayed at a time."
             fields:
-              - { label: "Size", name: "size", widget: "number", value_type: "int" }
-              - { label: "Reverse Order", name: "reverse", widget: "boolean", default: true }
+              - { label: "Size", name: "size", required: false, widget: "number", value_type: "int", hint: "The amount of projects you want displayed at a time." }
+              - { label: "Reverse Order", required: false, name: "reverse", widget: "boolean", default: true, hint: "Reversing Order displays latest to oldest." }
       - label: "About Page"
         name: "about"
         file: "src/about/about.json"
         preview_path: about/
         fields: 
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Summary", name: "summary", widget: "string" }
-          - { label: "Landing Image", name: "landingImage", widget: "image" }
-          - { label: "Landing image desciption", name: "landingImageAlt", widget: "string" }
-          - { label: "Page meta description", name: "metaDescription", widget: "string" }
+          - { label: "Title", name: "title", widget: "string", hint: "The text that will be displayed in the tab of the webpage." }
+          - { label: "Summary", name: "summary", widget: "string", hint: "This is a short summar about you. Grab the viewer's attention." }
+          - { label: "Landing Image", name: "landingImage", widget: "image", hint: "This image will be the landing image for about." }
+          - { label: "Landing image desciption", name: "landingImageAlt", widget: "string", hint: "The text displayed when the image isn't loaded." }
+          - { label: "Page meta description", name: "metaDescription", widget: "string", hint: "Define a description of your web page. This is used in SEO." }
           - label: "Links" 
             name: "links" 
             widget: "list"
             collapsed: true
+            hint: "Links to other webpages e.g. (LinkedIn, Behance, etc.)"
+            required: false
             fields: 
-              - { label: "Name", name: "linkName", widget: "string" }
-              - { label: "url", name: "url", widget: "string" }
+              - { label: "Name", name: "linkName", widget: "string", hint: "Name of the link you want displayed." }
+              - { label: "url", name: "url", widget: "string", hint: "The desired link. (e.g. https://www.example.com)" }
           - label: "Skills"
             name: "skills"
             widget: "list"
@@ -76,7 +84,7 @@ collections:
             fields: 
               - { label: "Name", name: "name", widget: "string" }
               - { label: "Image", name: "image", widget: "image" }
-              - { label: "Image description", name: "imageAlt", widget: "string" }
+              - { label: "Image description", name: "imageAlt", widget: "string", hint: "The text displayed when the image isn't loaded." }
           - label : "Interests"
             name: "interests"
             widget: "list"
@@ -87,31 +95,34 @@ collections:
             name: "interestsImage"
             collapsed: true
             widget: "image"
-          - { label: "Body", name: "body", widget: "markdown"}
+          - { label: "Body", name: "body", widget: "markdown", hint: "Any content you want to add. This will already be stylized for you."}
       - label: "Contact Page"
         name: "contact"
         file: "src/contact/contact.json"
+        preview_path: contact/
         editor:
           preview: false
         fields: 
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Page meta description", name: "metaDescription", widget: "string" }
+          - { label: "Title", name: "title", widget: "string", hint: "The text that will be displayed in the tab of the webpage." }
+          - { label: "Page meta description", name: "metaDescription", widget: "string", hint: "Define a description of your web page. This is used in SEO." }
   - label: "General"
     name: "general"
     files:
       - label: "Header & Footer"
         name: "headerFooter"
         file: "src/_data/global.json"
+        preview_path: /
         editor:
           preview: false
         fields:
-          - { label: "Logo", name: "logo", widget: "image", collapsed: true }
+          - { label: "Logo", name: "logo", widget: "image", collapsed: true, hint: "The logo displayed in the navigation bar." }
           - label: "Social Links" 
             name: "socialLinks" 
             widget: "list"
             collapsed: true
+            hint: "Links displayed at the bottom of the footer under 'Follow Me'."
             fields: 
-              - { label: "Name", name: "name", widget: "string" }
-              - { label: "Url", name: "url", widget: "string" }
-              - { label: "Icon", name: "img", widget: "image" }
-              - { label: "Icon Alt", name: "imgAlt", widget: "string" }
+              - { label: "Name", name: "name", widget: "string", hint: "The visible text you want displayed." }
+              - { label: "Url", name: "url", widget: "string", hint: "The desired link. (e.g. https://www.example.com)"}
+              - { label: "Icon", name: "img", widget: "image", hint: "Using .svg files are best for icons." }
+              - { label: "Icon Alt", name: "imgAlt", widget: "string", hint: "The text displayed when the image isn't loaded." }
