SEO integrated into each page and separated into separate object

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "homepage": "https://github.com/JK-Web-Projects/Portfolio_Template#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0"
   }
 }
