--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -111,11 +111,14 @@ collections:
     files:
       - label: "Header & Footer"
         name: "headerFooter"
-        file: "src/_data/global.json"
+        file: "src/_data/site.json"
         preview_path: /
         editor:
           preview: false
         fields:
+          - { label: "Author", name: "author", widget: "string", hint: "Author of the website." }
+          - { label: "Author Twitter", name: "authorTwitter", widget: "string", hint: "Your twitter handle." }
+          - { label: "Site url", name: "url", widget: "string", hint: "The entire url to the website." }
           - { label: "Logo", name: "logo", widget: "image", collapsed: true, hint: "The logo displayed in the navigation bar." }
           - label: "Social Links" 
             name: "socialLinks" 
