--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -15,7 +15,7 @@ collections:
     preview_path: projects/{{slug}}
     fields: 
      - { label: "Title", name: "title", widget: "string", hint: "The title of the project. This will also be displayed in the tab name." }
-     - { label: "Date", name: "date", widget: "datetime", hint: "When was the project created?" }
+     - { label: "Date", name: "date", widget: "datetime", required: false, hint: "When was the project created?" }
      - label: "Tags"
        name: "tags"
        widget: "select"
