base content and style added for popup

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,10 +4,10 @@ backend:
 media_folder: "public/assets/images"
 public_folder: "/assets/images"
 publish_mode: editorial_workflow
-site_url: "https://11ty-portfolio-template.netlify.app/"
-logo_url: "https://11ty-portfolio-template.netlify.app/assets/images/logoipsum-logo-1.svg"
+site_url: "https://jamstack-portfolio-template.netlify.app/"
+logo_url: "https://jamstack-portfolio-template.netlify.app/assets/images/logoipsum-logo-1.svg"
 collections:
-  - label: "Projects" 
+  - label: "Project" 
     name: "project"
     folder: "src/projects" 
     create: true 
